tests/sources/invalid/parseint_error.minipl
// i64 maxint 9_223_372_036_854_775_807 + 1
var x: int := 9223372036854775808;